--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -6,7 +6,7 @@
 
 
     <TextView
-        android:id="@+id/itemNoteTittle"
+        android:id="@+id/itemNoteTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
