--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -4,11 +4,18 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
 
+    <Button
+            android:id="@+id/addNoteButton"
+            android:text="Add note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:backgroundTint="#38AE1E"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible" />
+
 
 
 </LinearLayout>
