--- a/app/src/main/res/layout/activity_note_details.xml
+++ b/app/src/main/res/layout/activity_note_details.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
     <EditText
             android:id="@+id/noteDetailsTitle"
@@ -26,8 +27,6 @@
             android:id="@+id/updateButton"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:text="Update"
-    />
-
+            android:text="Update"/>
 
 </LinearLayout>
