--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:orientation="vertical">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorBackground">
 
     <Button
             android:id="@+id/addNoteButton"
-            android:text="Add note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:backgroundTint="#38AE1E"/>
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:text="Add Note"
+            android:layout_gravity="center"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/notesListRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible" />
-
+            android:id="@+id/notesListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--    <ImageButton-->
+<!--            app:srcCompat="@android:drawable/ic_input_add"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:scaleType="fitXY"-->
+<!--            android:id="@+id/addNoteButton"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            android:layout_marginEnd="52dp"-->
+<!--            android:layout_marginBottom="76dp"-->
+<!--            android:background="@color/colorBackground"/>-->
 
 
 </LinearLayout>
